// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeScript — diagnostics > reports diagnostics for multiple files > multi-file-diagnostics 1`] = `
"Diagnostics for fixtures/valid.ts (typescript):
0 error(s), 0 warning(s), 0 info message(s)

No issues found.

---

Diagnostics for fixtures/broken.ts (typescript):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;

exports[`TypeScript — diagnostics > reports errors for a broken file > broken-file-diagnostics 1`] = `
"Diagnostics for fixtures/broken.ts (typescript):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;

exports[`TypeScript — diagnostics > reports no diagnostics for a valid file > valid-file-diagnostics 1`] = `
"Diagnostics for fixtures/valid.ts (typescript):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;
